# solana-ua-bootcamp-2025-03-19

./: README.md  package-lock.json  package.json
.github/workflows/: sync-readme.yml
practice-1/: README.md
practice-1/key-grinder/: generate-keypair.ts
practice-2/: README.md
practice-2/to_rust/: .env  Cargo.toml
practice-3/: README.md
practice-4/: README.md
practice-4/favorites/: Anchor.toml  jest.config.js  new_favorites-keypair.json  package-lock.json  package.json  tsconfig.json
practice-4/favorites/programs/favorites/: Cargo.toml
practice-4/favorites/programs/favorites/src/: lib.rs
practice-4/favorites/tests/: favorites.test.ts
practice-5/: README.md
practice-6/: README.md
